K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx-deploy

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx-deploy

  template:
    metadata:
      labels:
        app: nginx-deploy

    spec:
      serviceAccountName: nginx-sa
      containers:
      - name: my-nginx-app1
        image: securek8sacr01.azurecr.io/secure-nginx:f12214058cd0e11d8b77dbe5ce0de799a777801f #Update with AKS Image
        imagePullPolicy: Always

        ports:
          - containerPort: 8080

        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true

        volumeMounts:
          - name: tmp-volume
            mountPath: /tmp
          - name: cache-volume
            mountPath: /var/cache/nginx

        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5

      volumes:
        - name: tmp-volume
          emptyDir: {}
        - name: cache-volume
          emptyDir: {}
