K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-deploy

spec:
  type: NodePort
  selector:
    app: nginx-deploy

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007
